# ai-chatbot-projetos

./: .gitignore  README.md  admin_ui.py  app.py  chains.py  classes.py  docling_test.py  employee.db  pyproject.toml  requirements.txt  sofia_logic.py  start_api.ch
backend/: api.py
docs/: Delta_Logistic_Intranet.txt  faq.txt  feedz.txt  sofia.txt  universidade.txt  wiki.txt
faiss_index/: index.faiss  index.pkl
services/: Intranet_repository_s3.py
z_old/: Intranet_repository_s3 copy.py  admin_ui copy.py  sofia_logic copy.py
